--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello world
+<!DOCTYPE html>
+<html>
+	<head>
+    <title>Google</title>
+    <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
+    </head>
+    <body>
+        <ul class="nav">
+           <li class="item1"><a href="">Item 1</a></li>
+           <li class="item2"><a href="">Item 2</a></li>
+           <li class="item3"><a href="">Item 3</a></li>
+           <li class="item4"><a href="">Item 4</a></li>
+           <li class="item5"><a href="">Item 5</a></li>
+        </ul>
+        <img src="http://www.google.com/images/srpr/logo11w.png"/>
+    </body>
+</html>
