--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
     </head>
     <body>
-        <ul class="nav">
-           <li class="item1"><a href="">Item 1</a></li>
-           <li class="item2"><a href="">Item 2</a></li>
-           <li class="item3"><a href="">Item 3</a></li>
-           <li class="item4"><a href="">Item 4</a></li>
-           <li class="item5"><a href="">Item 5</a></li>
-        </ul>
-        <img src="http://www.google.com/images/srpr/logo11w.png"/>
+		<div class="nav-container">
+			<ul class="nav">
+				<li class="item1"><a href="">Item 1</a></li>
+				<li class="item2"><a href="">Item 2</a></li>
+				<li class="item3"><a href="">Item 3</a></li>
+				<li class="item4"><a href="">Item 4</a></li>
+				<li class="item5"><a href="">Item 5</a></li>
+			</ul>
+		</div>
+		<img src="http://www.google.com/images/srpr/logo11w.png"/>
     </body>
 </html>
