--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 				<li class="item4"><a href="">Item 4</a></li>
 				<li class="item5"><a href="">Item 5</a></li>
 			</ul>
+			<div class="float-clear"></div>
 		</div>
-		<img src="http://www.google.com/images/srpr/logo11w.png"/>
+<!--		<img src="http://www.google.com/images/srpr/logo11w.png"/>-->
     </body>
 </html>
