--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
-	<head>
-    <title>Google</title>
-    <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
-    </head>
-    <body>
-		<div class="nav-container">
-			<ul class="nav">
-				<li><a href="#">Item 1</a></li>
-				<li><a href="#">Item 2</a></li>
-				<li><a href="#">Item 3</a></li>
-				<li>
-					<div class="apps-button">
-						<a href="#"></a>
-					</div>
-				</li>
-				<li>
-					<div class="sign-button">
-						<a href="#">Iniciar Sesi&oacute;n</a>
-					</div>
-				</li>
-			</ul>
-			<div class="float-clear"></div>
-		</div>
-<!--		<img src="http://www.google.com/images/srpr/logo11w.png"/>-->
-    </body>
+<head>
+  <title>Google</title>
+  <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
+</head>
+<body>
+  <div class="nav-container">
+    <ul class="nav">
+      <li><a href="#">+T&uacute;</a></li>
+      <li><a href="#">Gmail</a></li>
+      <li><a href="#">Im&aacute;genes</a></li>
+      <li class="apps-li">
+        <a href="#" class="apps-button"></a>
+      </li>
+      <li>
+      <div class="sign-button">
+        <a href="#">Iniciar Sesi&oacute;n</a>
+      </div>
+      </li>
+    </ul>
+    <div class="float-clear"></div>
+  </div>
+  <div class="main-logo">
+  		<img src="http://www.google.com/images/srpr/logo11w.png" class="logo"/>
+  </div>
+  <div class="form-container">
+    
+  </div>
+</body>
 </html>
