--- a/index.html
+++ b/index.html
@@ -4,28 +4,41 @@
   <title>Google</title>
   <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
 </head>
-<body>
-  <div class="nav-container">
-    <ul class="nav">
-      <li><a href="#">+T&uacute;</a></li>
-      <li><a href="#">Gmail</a></li>
-      <li><a href="#">Im&aacute;genes</a></li>
-      <li class="apps-li">
-        <a href="#" class="apps-button"></a>
-      </li>
-      <li>
-      <div class="sign-button">
-        <a href="#">Iniciar Sesi&oacute;n</a>
-      </div>
-      </li>
-    </ul>
-    <div class="float-clear"></div>
-  </div>
-  <div class="main-logo">
-  		<img src="http://www.google.com/images/srpr/logo11w.png" class="logo"/>
-  </div>
-  <div class="form-container">
-    
-  </div>
-</body>
+  <body>
+    <div class="nav-container">
+      <ul class="nav">
+        <li><a href="#">+T&uacute;</a></li>
+        <li><a href="#">Gmail</a></li>
+        <li><a href="#">Im&aacute;genes</a></li>
+        <li class="apps-li">
+          <a href="#" class="apps-button"></a>
+        </li>
+        <li>
+        <div class="sign-button">
+          <a href="#">Iniciar Sesi&oacute;n</a>
+        </div>
+        </li>
+      </ul>
+      <div class="float-clear"></div>
+    </div>
+    <div class="main-logo">
+          <img src="http://www.google.com/images/srpr/logo11w.png" class="logo"/>
+    </div>
+    <div class="form-container">
+      <form action="POST">
+        <div class="textbar-container">
+         <div class="mic-container">
+           <div class="mic-button"></div>
+           <div class="float-clear"></div>
+         </div>
+         <input type="text" name="search"/>
+         <div class="float-clear"></div>
+        </div>
+        <div class="search-buttons-container">
+         <input class="search"  type="submit" value="Google Search">
+         <input class="search"  type="submit" value="Suerte">
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
