--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
            <div class="mic-button"></div>
            <div class="float-clear"></div>
          </div>
-         <input type="text" name="search"/>
+         <input class="search-field" type="text" name="search"/>
          <div class="float-clear"></div>
         </div>
         <div class="search-buttons-container">
