--- a/index.html
+++ b/index.html
@@ -40,5 +40,18 @@
         </div>
       </form>
     </div>
+    <div class="footer">
+      <ul class="footer-left">
+        <li><a href="#">Publicidades</a></li>
+        <li><a href="#">Negocios</a></li>
+        <li><a href="#">Acerca de</a></li>
+      </ul>
+      <ul class="footer-right">
+        <li><a href="#">Privacidad</a></li>
+        <li><a href="#">Preferencias</a></li>
+        <li><a href="#">Utilizar Google.com</a></li>
+      </ul>
+      <div class="float-clear"></div>
+    </div>
   </body>
 </html>
