changed page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Google</title>
+  <title>Googled</title>
   <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
 </head>
   <body>
